@@ -1,3 +1,11 @@
+2011-06-03  Colomban Wendling  <colomban(at)geany(dot)org>
+
+ * src/callbacks.c, src/document.c, src/document.h, src/editor.c,
+   src/search.c, src/search.h:
+   Show the actual text the user searched for in messages rather than
+   the internal one (patch by Eugene Arshinov, thanks).
+
+
 2011-06-02  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
 
  * src/document.c, src/document.h, src/ui_utils.c, src/ui_utils.h:
